Overview: fix the animation regression.

If one side of the screen is occupied by a split window, and the other
side of the screen is occupied by overview, select an overview window
should only animate the selected overview window to snap, and the other
windows should not animate.

Bug: 866178
Change-Id: I1cb243ad61791a240227c6395770643603726a33
Reviewed-on: https://chromium-review.googlesource.com/1145836
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Tao Wu <wutao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#577230}
Former-commit-id: 6c86f168ebe18f075d22aca89c84236eb1f4a8ca